--- a/public/style/app.css
+++ b/public/style/app.css
@@ -172,6 +172,30 @@ a:hover {
   padding-right: 5px;
 }
 
+.jumbotron-yellow {
+  background-color: #f2be45;
+  border-color: #f2be45;
+  margin-top: -20px;
+  margin-bottom: 0;
+  color: #fff;
+}
+.jumbotron-yellow a {
+  color: #fff;
+}
+.jumbotron-yellow h1 {
+  margin-top: 0;
+  text-shadow: 4px 3px 0 #f2be45, 9px 5px 1px rgba(0, 0, 0, 0.15);
+}
+.jumbotron-yellow p {
+  margin: 20px 0;
+}
+.jumbotron-yellow ul {
+  margin: 30px 0 0;
+}
+.jumbotron-yellow ul i.fa {
+  padding-right: 5px;
+}
+
 .jumbotron-green {
   background-color: #21a675;
   border-color: #21a675;
@@ -283,6 +307,18 @@ a:hover {
   text-decoration: underline;
   text-decoration-style: solid;
   text-decoration-color: #4183c4;
+}
+
+/*------------------------------------*\
+    背景空荡时使用,结合JS
+\*------------------------------------*/
+canvas#evanyou {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 /*------------------------------------*\
@@ -445,4 +481,163 @@ a:hover {
   border-left: 0 solid transparent;
   width: 0;
   height: 0;
+}
+
+/*------------------------------------*\
+    归档
+\*------------------------------------*/
+.archive {
+  line-height: 1.6;
+  padding: 20px;
+  background-color: #fff;
+  margin: 25px 0 30px;
+}
+
+.timeline .timeline-body {
+  width: 78%;
+  margin: 30px 11% 0;
+  padding: 0 0 40px;
+  float: left;
+  position: relative;
+}
+.timeline .timeline-body:after {
+  background: -webkit-linear-gradient(top, rgba(80, 80, 80, 0) 0%, #505050 8%, #505050 92%, rgba(80, 80, 80, 0) 100%);
+  background: -o-linear-gradient(top, rgba(80, 80, 80, 0) 0%, #505050 8%, #505050 92%, rgba(80, 80, 80, 0) 100%);
+  background: -ms-linear-gradient(top, rgba(80, 80, 80, 0) 0%, #505050 8%, #505050 92%, rgba(80, 80, 80, 0) 100%);
+  background: linear-gradient(to bottom, rgba(80, 80, 80, 0) 0%, #505050 8%, #505050 92%, rgba(80, 80, 80, 0) 100%);
+  content: "";
+  display: block;
+  height: 100%;
+  left: 50%;
+  position: absolute;
+  top: 0;
+  width: 3px;
+  z-index: 0;
+  filter: alpha(opacity=35);
+  opacity: 0.35;
+}
+.timeline .timeline-body .timeline-date {
+  padding: 30px 0 10px;
+  position: relative;
+  z-index: 1;
+  clear: both;
+}
+.timeline .timeline-body .timeline-date h3 {
+  padding: 10px 20px;
+}
+.timeline .timeline-body .timeline-box {
+  width: 46%;
+  position: relative;
+  z-index: 1;
+  padding: 15px;
+  margin: 10px;
+}
+.timeline .timeline-body .timeline-box.left {
+  clear: both;
+  float: left;
+}
+.timeline .timeline-body .timeline-box.right {
+  clear: both;
+  float: right;
+}
+.timeline .timeline-body .timeline-box.left:before {
+  right: -7.6%;
+}
+.timeline .timeline-body .timeline-box.right:before {
+  left: -6.9%;
+}
+.timeline .timeline-body .timeline-box.left:after {
+  right: -8px;
+  border-right: 1px solid #E5E5E5;
+  border-top: 1px solid #E5E5E5;
+}
+.timeline .timeline-body .timeline-box.right:after {
+  left: -8px;
+  border-left: 1px solid #E5E5E5;
+  border-bottom: 1px solid #E5E5E5;
+}
+.timeline .timeline-body .timeline-box:before {
+  box-shadow: 0 0 0 3px #ffffff, 0 0 0 6px #65a5d9;
+  background: none repeat scroll 0 0 #65a5d9;
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 7px;
+  position: absolute;
+  top: 22px;
+  width: 8px;
+}
+.timeline .timeline-body .timeline-box:after {
+  background: #FFF;
+  content: "";
+  display: block;
+  height: 14px;
+  position: absolute;
+  top: 18px;
+  width: 14px;
+  z-index: 0;
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+/*------------------------------------*\
+    分类,标签
+\*------------------------------------*/
+.category-tag-content {
+  width: 80%;
+  margin: 50px auto;
+}
+.category-tag-content .category-all {
+  padding: 0 50px;
+}
+.category-tag-content .category-all ul {
+  line-height: 60px;
+  font-size: 26px;
+}
+.category-tag-content .count p {
+  font-size: 18px;
+}
+.category-tag-content .count p span {
+  font-weight: bold;
+}
+.category-tag-content .tag-cloud {
+  padding: 0 50px;
+  line-height: 60px;
+}
+.category-tag-content .tag-cloud a {
+  border-bottom: 1px solid #ccc;
+}
+.category-tag-content .tag-cloud a:active, .category-tag-content .tag-cloud a:hover {
+  border-bottom-color: #222;
+}
+.category-tag-content .tag-cloud .tag-1 {
+  font-size: 12px;
+  color: #ccc;
+}
+.category-tag-content .tag-cloud .tag-2 {
+  font-size: 15px;
+  color: #adadad;
+}
+.category-tag-content .tag-cloud .tag-3 {
+  font-size: 18px;
+  color: #8e8e8e;
+}
+.category-tag-content .tag-cloud .tag-4 {
+  font-size: 21px;
+  color: #6f6f6f;
+}
+.category-tag-content .tag-cloud .tag-5 {
+  font-size: 24px;
+  color: #4f4f4f;
+}
+.category-tag-content .tag-cloud .tag-6 {
+  font-size: 27px;
+  color: #303030;
+}
+.category-tag-content .tag-cloud .tag-7 {
+  font-size: 30px;
+  color: #111;
 }
