--- a/resources/grunt/scss/app.scss
+++ b/resources/grunt/scss/app.scss
@@ -1,6 +1,6 @@
-// 基础颜色:黑色
+// 黑色
 $base_color_black: #293038;
-// 基础颜色:灰色
+// 灰色
 $base_color_gray: #F7F8F9;
 
 // 妃色
@@ -13,6 +13,8 @@ $base_color_orange2: #b35c44;
 
 // 鹅黄
 $base_color_yellow: #fff143;
+// 赤金
+$base_color_yellow2: #f2be45;
 
 // 松花色
 $base_color_green: #bce672;
@@ -22,7 +24,7 @@ $base_color_green2: #21a675;
 // 青碧
 $base_color_cyan: #48c0a3;
 
-// 基础颜色: 蓝色
+// 蓝色
 $base_color_blue: #4183c4;
 
 // 紫酱
@@ -152,6 +154,7 @@ a:hover{
 /*------------------------------------*\
     幕头
 \*------------------------------------*/
+
 // 蓝色 主要用在首页的个人信息显示
 .jumbotron-blue{
   background-color: $base_color_blue;
@@ -202,6 +205,31 @@ a:hover{
   }
 }
 
+// 赤金 归档
+.jumbotron-yellow{
+  background-color: $base_color_yellow2;
+  border-color: $base_color_yellow2;
+  margin-top: -20px;
+  margin-bottom: 0;
+  color:#fff;
+  a{
+    color: #fff;
+  }
+  h1{
+    margin-top:0;
+    text-shadow: 4px 3px 0 $base_color_yellow2, 9px 5px 1px rgba(0, 0, 0, 0.15);
+  }
+  p{
+    margin: 20px 0;
+  }
+  ul{
+    margin: 30px 0 0;
+    i.fa{
+      padding-right: 5px;
+    }
+  }
+}
+
 // 松柏绿  关于
 .jumbotron-green{
   background-color: $base_color_green2;
@@ -226,6 +254,8 @@ a:hover{
     }
   }
 }
+
+
 
 
 /*------------------------------------*\
@@ -319,6 +349,19 @@ a:hover{
       text-decoration-color: $base_color_blue;
     }
   }
+}
+
+
+/*------------------------------------*\
+    背景空荡时使用,结合JS
+\*------------------------------------*/
+canvas#evanyou{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 
@@ -512,4 +555,183 @@ a:hover{
   }
 
 }
+
+
+/*------------------------------------*\
+    归档
+\*------------------------------------*/
+.archive{
+  line-height: 1.6;
+  padding: 20px;
+  background-color: #fff;
+  margin: 25px 0 30px;
+}
+
+.timeline{
+  .timeline-body{
+    width: 78%;
+    margin: 30px 11% 0;
+    padding: 0 0 40px;
+    float: left;
+    position: relative;
+
+    &:after{
+      background: -webkit-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
+      background: -o-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
+      background: -ms-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
+      background: linear-gradient(to bottom, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
+      content: "";
+      display: block;
+      height: 100%;
+      left: 50%;
+      position: absolute;
+      top: 0;
+      width: 3px;
+      z-index: 0;
+      filter: alpha(opacity=35);
+      opacity: 0.35;
+    }
+
+    .timeline-date{
+      padding:30px 0 10px;
+      position: relative;
+      z-index: 1;
+      clear: both;
+      h3{
+        padding: 10px 20px;
+      }
+    }
+
+    .timeline-box{
+      width: 46%;
+      position: relative;
+      z-index: 1;
+      padding: 15px;
+      margin: 10px;
+      &.left{
+        clear:both;
+        float: left;
+      }
+      &.right{
+        clear: both;
+        float: right;
+      }
+      &.left:before{
+        right: -7.6%;
+      }
+      &.right:before{
+        left: -6.9%;
+      }
+      &.left:after{
+        right: -8px;
+        border-right: 1px solid #E5E5E5;
+        border-top: 1px solid #E5E5E5;
+      }
+      &.right:after{
+        left: -8px;
+        border-left: 1px solid #E5E5E5;
+        border-bottom: 1px solid #E5E5E5;
+      }
+
+      &:before{
+        box-shadow: 0 0 0 3px #ffffff, 0 0 0 6px #65a5d9;
+        background: none repeat scroll 0 0 #65a5d9;
+        border-radius: 50%;
+        content: "";
+        display: block;
+        height: 7px;
+        position: absolute;
+        top: 22px;
+        width: 8px;
+      }
+      &:after{
+        background: #FFF;
+        content: "";
+        display: block;
+        height: 14px;
+        position: absolute;
+        top: 18px;
+        width: 14px;
+        z-index: 0;
+        -moz-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        transform: rotate(45deg);
+      }
+    }
+
+  }
+
+}
+
+
+/*------------------------------------*\
+    分类,标签
+\*------------------------------------*/
+.category-tag-content{
+  width: 80%;
+  margin: 50px auto;
+  .category-all{
+    padding: 0 50px;
+    ul{
+      line-height: 60px;
+      font-size: 26px;
+    }
+  }
+  .count{
+    p{
+      font-size: 18px;
+      span{
+        font-weight: bold;
+
+      }
+    }
+  }
+  .tag-cloud{
+    padding: 0 50px;
+    line-height: 60px;
+    a{
+      border-bottom: 1px solid #ccc;
+      &:active,&:hover{
+        border-bottom-color: #222;
+      }
+    }
+    .tag-1{
+      font-size: 12px;
+      color: #ccc;
+    }
+    .tag-2{
+      font-size: 15px;
+      color: #adadad;
+    }
+    .tag-3{
+      font-size: 18px;
+      color: #8e8e8e;
+    }
+    .tag-4{
+      font-size: 21px;
+      color: #6f6f6f;
+    }
+    .tag-5{
+      font-size: 24px;
+      color: #4f4f4f;
+    }
+    .tag-6{
+      font-size: 27px;
+      color: #303030;
+    }
+    .tag-7{
+      font-size: 30px;
+      color: #111;
+    }
+  }
+
+
+}
+
+
+
+
+
 
