--- a/public/style/app.css
+++ b/public/style/app.css
@@ -4,6 +4,7 @@
 \*------------------------------------*/
 body {
   background-color: #F7F8F9;
+  font-family: "Avenir Next","Helvetica Neue",Helvetica,Arial,"Microsoft YaHei",sans-serif;
 }
 
 a:hover {
@@ -11,7 +12,7 @@ a:hover {
 }
 
 ::selection {
-  background: #293038;
+  background: #5d513c;
   color: #fff;
 }
 
@@ -46,10 +47,151 @@ a:hover {
 }
 
 .box-shadow {
-  background-color: white;
+  background-color: #fff;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+.font-serif {
+  font-family: Times, Georgia, serif;
+}
+
+.sidebar-chunk {
+  margin-bottom: 20px;
+  padding: 15px;
+}
+.sidebar-chunk .sc-label {
+  position: relative;
+  padding: 5px 15px 5px 30px;
+  left: -30px;
+  background-color: #ff8936;
+  color: white;
+}
+.sidebar-chunk .sc-label:after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  border-top: 0 solid transparent;
+  border-right: 15px solid #9c4000;
+  border-bottom: 15px solid transparent;
+  border-left: 0 solid transparent;
+  width: 0;
+  height: 0;
+}
+
+.tag-piece {
+  opacity: .75;
+  background-color: #777;
+  display: inline-block;
+  text-decoration: none;
+  font-weight: normal;
+  font-size: 12px;
+  color: #fff !important;
+  height: 20px;
+  line-height: 20px;
+  padding: 0 5px;
+  position: relative;
+  margin: 5px 3px 5px 10px;
+}
+.tag-piece:before {
+  content: " ";
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: 0;
+  left: -20px;
+  border: 10px solid transparent;
+  border-right-color: #777;
+}
+.tag-piece:hover {
+  opacity: 1;
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
+.tag-piece-LightPink {
+  background-color: #ed5736;
+}
+.tag-piece-LightPink:before {
+  border-right-color: #ed5736;
+}
+
+.tag-piece-conifer {
+  background-color: #21a675;
+}
+.tag-piece-conifer:before {
+  border-right-color: #21a675;
+}
+
+.tag-piece-sauce {
+  background-color: #815476;
+}
+.tag-piece-sauce:before {
+  border-right-color: #815476;
+}
+
+.tag-piece-RedGold {
+  background-color: #f2be45;
+}
+.tag-piece-RedGold:before {
+  border-right-color: #f2be45;
+}
+
+.tag-piece-ultramarine {
+  background-color: #4c8dae;
+}
+.tag-piece-ultramarine:before {
+  border-right-color: #4c8dae;
+}
+
+.tag-piece-swarthy {
+  background-color: #665757;
+}
+.tag-piece-swarthy:before {
+  border-right-color: #665757;
+}
+
+.tag-piece-ink {
+  background-color: #50616d;
+}
+.tag-piece-ink:before {
+  border-right-color: #50616d;
+}
+
+.tag-piece-amber {
+  background-color: #ca6924;
+}
+.tag-piece-amber:before {
+  border-right-color: #ca6924;
+}
+
+.wm-label {
+  display: inline-block;
+  padding: .4em .6em;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff !important;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+}
+
+.vm-label-scale:hover {
+  opacity: 1;
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
+.wm-label-default {
+  opacity: .75;
+  background-color: #777;
 }
 
 /*------------------------------------*\
@@ -228,21 +370,26 @@ a:hover {
 }
 
 .article-list-entry {
-  background-color: #F7F8F9;
+  background-color: #fff;
   border: 1px solid #f1f3f5;
   margin: 0 0 30px 0;
 }
-.article-list-entry a {
-  color: #4183c4;
-}
 .article-list-entry .article-list-header {
-  border-left: 6px solid #eef0f2;
+  border-left: 6px solid rgba(128, 128, 128, 0.1);
+  border-top-left-radius: 5px;
   padding: 5px 20px;
 }
 .article-list-entry .article-list-header:active, .article-list-entry .article-list-header:hover {
-  border-left: 6px solid #bce672;
+  border-color: rgba(0, 188, 18, 0.6);
+}
+.article-list-entry .article-list-header a {
+  color: rgba(128, 128, 128, 0.9);
+}
+.article-list-entry .article-list-header a:hover {
+  color: #808080;
 }
 .article-list-entry .article-list-header .title {
+  font-weight: 600;
   position: relative;
 }
 .article-list-entry .article-list-header .title .time {
@@ -253,6 +400,8 @@ a:hover {
 .article-list-entry .article-list-content {
   margin-left: 26px;
   padding-bottom: 15px;
+  font-size: 18px;
+  color: #808080;
 }
 .article-list-entry .article-list-footer {
   margin: 0 26px;
@@ -260,34 +409,56 @@ a:hover {
   padding: 5px 0 10px;
   position: relative;
 }
+.article-list-entry .article-list-footer .category:before {
+  content: "\f02d";
+  display: inline-block;
+  float: left;
+  color: #999;
+  font: normal normal normal 20px FontAwesome;
+  margin: 6px 6px 0 0;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.article-list-entry .article-list-footer .tag {
+  margin-left: 20px;
+}
+.article-list-entry .article-list-footer .tag:before {
+  content: "\f02b";
+  display: inline-block;
+  float: left;
+  color: #999;
+  font: normal normal normal 20px FontAwesome;
+  margin: 6px 6px 0 0;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 .article-list-entry .article-list-footer .more {
-  position: absolute;
-  right: 0;
+  padding: 4px 0;
 }
 
 /*------------------------------------*\
     侧边样式 (类别,标签,归档)
 \*------------------------------------*/
 .article-category {
-  background-color: #F7F8F9;
-  border-top: 6px solid #f06e52;
-  padding: 5px 30px;
+  background-color: #fff;
   margin-bottom: 30px;
 }
 .article-category li {
   line-height: 40px;
-  color: #ed5736;
+  color: rgba(128, 128, 128, 0.8);
 }
 .article-category li:before {
-  content: '\f105';
+  content: '·';
 }
 .article-category li a {
-  color: #ed5736;
+  color: rgba(128, 128, 128, 0.8);
   padding: 0 0 10px 15px;
 }
 .article-category li a:hover {
   text-decoration: underline;
-  color: #bce672;
+  color: #808080;
 }
 
 /*------------------------------------*\
@@ -299,6 +470,7 @@ a:hover {
   border-top: 1px solid #e3e6ea;
   margin-top: 60px;
   padding: 25px 0;
+  background-color: #F7F8F9;
 }
 .app-footer a {
   color: #4183c4;
@@ -329,7 +501,7 @@ canvas#evanyou {
   z-index: 24;
   bottom: 40px;
   right: 50px;
-  color: #293038;
+  color: #5d513c;
 }
 
 .back-to-top {
@@ -441,7 +613,7 @@ canvas#evanyou {
   width: 60%;
 }
 .profile .social {
-  margin: 20px 0px 5px;
+  margin: 20px 0 5px;
 }
 
 .music-player {
@@ -457,30 +629,6 @@ canvas#evanyou {
   padding: 15px;
   font-size: 40px;
   color: #e51c23;
-}
-
-.popular {
-  margin-bottom: 20px;
-  padding: 15px;
-}
-.popular .p-label {
-  position: relative;
-  padding: 5px 15px 5px 30px;
-  left: -30px;
-  background-color: #b35c44;
-  color: white;
-}
-.popular .p-label:after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 0;
-  border-top: 0 solid transparent;
-  border-right: 15px solid #44231a;
-  border-bottom: 15px solid transparent;
-  border-left: 0 solid transparent;
-  width: 0;
-  height: 0;
 }
 
 /*------------------------------------*\
