--- a/public/style/frontend/duoshuo.css
+++ b/public/style/frontend/duoshuo.css
@@ -148,6 +148,10 @@
 .theme-default #ds-reset .ds-avatar img{
   box-shadow: none;
 }
+.theme-default #ds-thread{
+    background-color: #fff;
+    padding: 20px;
+}
 .theme-default #ds-thread #ds-reset .ds-header{
     background:none;
     background-color: #f6f8fa;
