--- a/resources/grunt/scss/app.scss
+++ b/resources/grunt/scss/app.scss
@@ -1,35 +1,39 @@
-// 黑色
-$base_color_black: #293038;
 // 灰色
 $base_color_gray: #F7F8F9;
-
+// 灰色
+$color_gray: #808080;
 // 妃色
-$base_color_red: #ed5736;
-
+$color_LightPink: #ed5736;
 // 橘黄
-$base_color_orange: #ff8936;
+$color_orange: #ff8936;
 // 茶色
-$base_color_orange2: #b35c44;
-
+$color_tawny: #b35c44;
 // 鹅黄
 $base_color_yellow: #fff143;
 // 赤金
-$base_color_yellow2: #f2be45;
-
+$color_RedGold: #f2be45;
 // 松花色
 $base_color_green: #bce672;
 // 松柏绿
-$base_color_green2: #21a675;
-
+$color_conifer: #21a675;
+// 油绿
+$color-YouLv: #00bc12;
 // 青碧
 $base_color_cyan: #48c0a3;
-
+// 群青
+$color_ultramarine: #4c8dae;
 // 蓝色
-$base_color_blue: #4183c4;
-
+$color_blue: #4183c4;
 // 紫酱
-$base_color_purple: #815476;
-
+$color_sauce: #815476;
+// 黧
+$color_haze: #5d513c;
+// 黝黑
+$color_swarthy:#665757;
+// 墨色
+$color_ink: #50616d;
+// 琥珀
+$color_amber: #ca6924;
 
 
 /*------------------------------------*\
@@ -37,12 +41,13 @@ $base_color_purple: #815476;
 \*------------------------------------*/
 body{
   background-color: $base_color_gray;
+  font-family: "Avenir Next","Helvetica Neue",Helvetica,Arial,"Microsoft YaHei",sans-serif;
 }
 a:hover{
   text-decoration: none;
 }
 ::selection{
-  background: $base_color_black;
+  background: $color_haze;
   color: #fff;
 }
 .inline{
@@ -71,10 +76,141 @@ a:hover{
   -moz-osx-font-smoothing: grayscale;
 }
 .box-shadow{
-  background-color: white;
+  background-color: #fff;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+}
+// 衬线字体
+.font-serif{
+  font-family: Times, Georgia, serif;
+}
+// 侧边栏的一个块
+.sidebar-chunk{
+  margin-bottom: 20px;
+  padding: 15px;
+  .sc-label{
+    position: relative;
+    padding: 5px 15px 5px 30px;
+    left: -30px;
+    background-color: $color_orange;
+    color: white;
+    &:after{
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 0;
+      border-top: 0 solid transparent;
+      border-right: 15px solid darken($color_orange,30%);
+      border-bottom: 15px solid transparent;
+      border-left: 0 solid transparent;
+      width: 0;
+      height: 0;
+    }
+  }
+}
+// 显示一个标签块
+.tag-piece{
+  opacity: .75;
+  background-color: #777;
+  display: inline-block;
+  text-decoration: none;
+  font-weight: normal;
+  font-size: 12px;
+  color: #fff !important;
+  height: 20px;
+  line-height: 20px;
+  padding: 0 5px;
+  position: relative;
+  margin: 5px 3px 5px 10px;
+  &:before{
+    content: " ";
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: 0;
+    left: -20px;
+    border: 10px solid transparent;
+    border-right-color: #777;
+  }
+  &:hover{
+    opacity: 1;
+    -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+  }
+}
+.tag-piece-LightPink{
+  background-color: $color_LightPink;
+  &:before{
+    border-right-color: $color_LightPink;
+  }
+}
+.tag-piece-conifer{
+  background-color: $color_conifer;
+  &:before{
+    border-right-color: $color_conifer;
+  }
+}
+.tag-piece-sauce{
+  background-color: $color_sauce;
+  &:before{
+    border-right-color: $color_sauce;
+  }
+}
+.tag-piece-RedGold{
+  background-color: $color_RedGold;
+  &:before{
+    border-right-color: $color_RedGold;
+  }
+}
+.tag-piece-ultramarine{
+  background-color: $color_ultramarine;
+  &:before{
+    border-right-color: $color_ultramarine;
+  }
+}
+.tag-piece-swarthy{
+  background-color: $color_swarthy;
+  &:before{
+    border-right-color: $color_swarthy;
+  }
+}
+.tag-piece-ink{
+  background-color: $color_ink;
+  &:before{
+    border-right-color: $color_ink;
+  }
+}
+.tag-piece-amber{
+  background-color: $color_amber;
+  &:before{
+    border-right-color: $color_amber;
+  }
+}
+
+.wm-label{
+  display: inline-block;
+  padding: .4em .6em;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff !important;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+}
+.vm-label-scale:hover{
+  opacity: 1;
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
+}
+.wm-label-default{
+  opacity: .75;
+  background-color: #777;
 }
 
 
@@ -83,15 +219,15 @@ a:hover{
 \*------------------------------------*/
 // 蓝色背景 白色字体
 .navbar-blue{
-  background-color: $base_color_blue;
-  border-color: $base_color_blue;
+  background-color: $color_blue;
+  border-color: $color_blue;
   a{
     color: #fff;
   }
   .nav > li > a:hover,
   .nav > li > a:focus {
     text-decoration: none;
-    background-color: $base_color_orange;
+    background-color: $color_orange;
   }
   .navbar-toggle{
     border-color: $base_color_gray;
@@ -119,7 +255,7 @@ a:hover{
   background-color: #fff;
   border-color: #fff;
   a{
-    color: $base_color_blue;
+    color: $color_blue;
   }
   .nav > li > a:hover,
   .nav > li > a:focus {
@@ -157,8 +293,8 @@ a:hover{
 
 // 蓝色 主要用在首页的个人信息显示
 .jumbotron-blue{
-  background-color: $base_color_blue;
-  border-color: $base_color_blue;
+  background-color: $color_blue;
+  border-color: $color_blue;
   margin-top: -20px;
   margin-bottom: 0;
   color:#fff;
@@ -167,7 +303,7 @@ a:hover{
   }
   h1{
     margin-top:0;
-    text-shadow: 4px 3px 0 $base_color_blue, 9px 5px 1px rgba(0, 0, 0, 0.15);
+    text-shadow: 4px 3px 0 $color_blue, 9px 5px 1px rgba(0, 0, 0, 0.15);
   }
   p{
     margin: 20px 0;
@@ -182,8 +318,8 @@ a:hover{
 
 // 紫酱  文章
 .jumbotron-purple{
-  background-color: $base_color_purple;
-  border-color: $base_color_purple;
+  background-color: $color_sauce;
+  border-color: $color_sauce;
   margin-top: -20px;
   margin-bottom: 0;
   color:#fff;
@@ -192,7 +328,7 @@ a:hover{
   }
   h1{
     margin-top:0;
-    text-shadow: 4px 3px 0 $base_color_purple, 9px 5px 1px rgba(0, 0, 0, 0.15);
+    text-shadow: 4px 3px 0 $color_sauce, 9px 5px 1px rgba(0, 0, 0, 0.15);
   }
   p{
     margin: 20px 0;
@@ -207,8 +343,8 @@ a:hover{
 
 // 赤金 归档
 .jumbotron-yellow{
-  background-color: $base_color_yellow2;
-  border-color: $base_color_yellow2;
+  background-color: $color_RedGold;
+  border-color: $color_RedGold;
   margin-top: -20px;
   margin-bottom: 0;
   color:#fff;
@@ -217,7 +353,7 @@ a:hover{
   }
   h1{
     margin-top:0;
-    text-shadow: 4px 3px 0 $base_color_yellow2, 9px 5px 1px rgba(0, 0, 0, 0.15);
+    text-shadow: 4px 3px 0 $color_RedGold, 9px 5px 1px rgba(0, 0, 0, 0.15);
   }
   p{
     margin: 20px 0;
@@ -232,8 +368,8 @@ a:hover{
 
 // 松柏绿  关于
 .jumbotron-green{
-  background-color: $base_color_green2;
-  border-color: $base_color_green2;
+  background-color: $color_conifer;
+  border-color: $color_conifer;
   margin-top: -20px;
   margin-bottom: 0;
   color:#fff;
@@ -242,7 +378,7 @@ a:hover{
   }
   h1{
     margin-top:0;
-    text-shadow: 4px 3px 0 $base_color_green2, 9px 5px 1px rgba(0, 0, 0, 0.15);
+    text-shadow: 4px 3px 0 $color_conifer, 9px 5px 1px rgba(0, 0, 0, 0.15);
   }
   p{
     margin: 20px 0;
@@ -265,19 +401,24 @@ a:hover{
   margin-top: 30px;
 }
 .article-list-entry{
-  background-color: $base_color_gray;
+  background-color: #fff;
   border: 1px solid darken($base_color_gray,2%);
   margin: 0 0 30px 0;
-  a{
-    color: $base_color_blue;
-  }
   .article-list-header{
-    border-left:6px solid darken($base_color_gray,3%);
+    border-left:6px solid rgba($color_gray,.1);
+    border-top-left-radius: 5px;
     padding: 5px 20px;
     &:active,&:hover{
-      border-left:6px solid $base_color_green;
+      border-color: rgba($color-YouLv,.6);
+    }
+    a{
+      color: rgba($color_gray,.9);
+      &:hover{
+        color: $color_gray;
+      }
     }
     .title{
+      font-weight: 600;
       position: relative;
       .time{
         position: absolute;
@@ -289,16 +430,46 @@ a:hover{
   .article-list-content{
     margin-left: 26px;
     padding-bottom: 15px;
+    font-size: 18px;
+    color: $color_gray;
   }
   .article-list-footer{
     margin:0 26px;
     border-top: 1px solid darken($base_color_gray,7%);
     padding: 5px 0 10px;
     position: relative;
-    .more{
-      position: absolute;
-      right:0;
+    .category{
+      &:before{
+        content: "\f02d";
+        display: inline-block;
+        float: left;
+        color: #999;
+        font: normal normal normal 20px FontAwesome;
+        margin: 6px 6px 0 0;
+        text-rendering: auto;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+    
     }
+    .tag{
+      margin-left: 20px;
+      &:before{
+        content: "\f02b";
+        display: inline-block;
+        float: left;
+        color: #999;
+        font: normal normal normal 20px FontAwesome;
+        margin: 6px 6px 0 0;
+        text-rendering: auto;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+    }
+    .more{
+      padding: 4px 0;
+    }
+
   }
 }
 
@@ -307,24 +478,23 @@ a:hover{
     侧边样式 (类别,标签,归档)
 \*------------------------------------*/
 .article-category{
-  background-color: $base_color_gray;
-  border-top: 6px solid lighten($base_color_red,6%);
-  padding: 5px 30px;
+  background-color: #fff;
   margin-bottom: 30px;
 
   li {
     line-height: 40px;
-    color: $base_color_red;
+    color: rgba($color_gray,.8);
     &:before{
       @extend .font-awesome;
-      content: '\f105';
+      //content: '\f105';
+      content: '·';
     }
     a{
       &:hover{
         text-decoration: underline;
-        color:$base_color_green;
+        color: $color_gray;
       }
-      color: $base_color_red;
+      color: rgba($color_gray,.8);
       padding: 0 0 10px 15px;
     }
   }
@@ -341,12 +511,13 @@ a:hover{
   border-top: 1px solid darken($base_color_gray,7%);
   margin-top: 60px;
   padding: 25px 0;
+  background-color: $base_color_gray;
   a{
-    color: $base_color_blue;
+    color: $color_blue;
     &:hover{
       text-decoration: underline;
       text-decoration-style: solid;
-      text-decoration-color: $base_color_blue;
+      text-decoration-color: $color_blue;
     }
   }
 }
@@ -373,7 +544,7 @@ canvas#evanyou{
   z-index: 24;
   bottom: 40px;
   right: 50px;
-  color: $base_color_black;
+  color: $color_haze;
 }
 .back-to-top{
   color: white;
@@ -513,7 +684,7 @@ canvas#evanyou{
   }
 
   .social{
-    margin: 20px 0px 5px;
+    margin: 20px 0 5px;
   }
 
 }
@@ -530,32 +701,6 @@ canvas#evanyou{
   font-size: 40px;
   color: #e51c23;
 }
-.popular{
-  margin-bottom: 20px;
-  padding: 15px;
-
-  .p-label{
-    position: relative;
-    padding: 5px 15px 5px 30px;
-    left: -30px;
-    background-color: $base_color_orange2;
-    color: white;
-    &:after{
-      content: "";
-      position: absolute;
-      top: 100%;
-      left: 0;
-      border-top: 0 solid transparent;
-      border-right: 15px solid darken($base_color_orange2,30%);
-      border-bottom: 15px solid transparent;
-      border-left: 0 solid transparent;
-      width: 0;
-      height: 0;
-    }
-  }
-
-}
-
 
 /*------------------------------------*\
     归档
